Fixed issues in popular posts side
Fixed issue of the last two overlay gradient of the last two divs in popular post not aligning correctly. Also added a hover effect on it while adjusting the hover effect on the main blog part. Lastly, I added a responsive design at 1250px width

--- a/projects/01-blog-post/styles.css
+++ b/projects/01-blog-post/styles.css
@@ -299,7 +299,7 @@ nav ul li:hover > a {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
-    height: auto;
+    position: relative;
 }
 
 .blog h2{
@@ -339,7 +339,7 @@ nav ul li:hover > a {
 
 /* Step 8: Post Content Styles */
 
-.post-content .overlap-wrapper{
+.overlap-wrapper{
     position: absolute;
     transition: all 0.2s ease;
     width: 403px;
@@ -353,7 +353,7 @@ nav ul li:hover > a {
 }
 
 .overlap-wrapper:hover{
-    opacity: 0;
+    opacity: 1;
     transition: 0.5 ease-in;
 }
 
@@ -376,12 +376,12 @@ nav ul li:hover > a {
     padding: 10px 15px;
     margin-top: 30px;
     width: 403px;
+    font-size: 15px;
 }
 
 /* Step 10: Post Info Styles */
 .post-info {
     padding: 10px 0;
-    font-size: 15px;
     font-weight: bold;
 }
 
@@ -389,20 +389,35 @@ nav ul li:hover > a {
 .post-summary {
     padding-top: 15px;
     line-height: 25px;
-    font-size: 15px;
 }
 
 /* Step 12: Responsive Styles */
-@media only screen and (max-width: 1320px) {
-    /* .main-content {
+@media only screen and (max-width: 1250px) {
+    .posts{
+        display: flex;
+        justify-content: center;
         align-items: center;
-    } */
-
-    .blog .posts {
-        grid-template-columns: repeat(1, 1fr);
-        gap: 50em;
+        height: auto;
+        flex-direction: column;
+    } 
+    
+    .blog .posts{
+        grid-gap: 70px;
     }
-        
+
+    .post-image, .overlap-wrapper {
+        height: 377px;
+        width: 303px;
+    }
+
+    .post-title{
+        font-size: 20px;
+    }
+
+    .details{
+        width: 303px;
+    }
+    
 }
 
 /* Step 13: Responsive Styles for Posts */
@@ -444,12 +459,16 @@ nav ul li:hover > a {
     text-align: center;
 }
 
+.popular-post{
+    overflow: hidden;
+}
+
 .popular-post-content{
     position: absolute;
     transition: all 0.2s ease;
     width: 562px;
     height: 300px;
-    background: linear-gradient(180deg, var(--yellow3) 0%, rgb(0, 0, 0) 45%);
+    background: linear-gradient(180deg, var(--yellow3) 0%, rgb(0, 0, 0) 50%);
     opacity: 0.8;
     top: 0;
     padding: 100px 50px;
@@ -457,14 +476,14 @@ nav ul li:hover > a {
 }
 
 .b{
-    top: 35em;
+    grid-row: 2;
 }
 
 /* Step 5: Popular Post Hover Styles */
 .popular-post:hover {
-    /* margin-left: ;
-    margin-right: ;
-    transition: ; */
+    transform: scale(1.1);
+    transition: all 0.5 ease-in;
+    cursor: pointer;
 }
 
 /* Step 6: Popular Post Image Styles */
@@ -495,6 +514,25 @@ nav ul li:hover > a {
 }
 
 /* Step 10: Responsive Styles for Popular Posts Container */
+
+@media only screen and (max-width: 1250px) {
+    .popular-post-title {
+        font-size: 20px;
+    }
+
+    .popular-post-image {
+        width: 462px;
+        height: 200px;
+        border-radius: 5px;
+    }
+
+    .popular-post-content{
+        height: 200px;
+        width: 462px;
+        background: linear-gradient(180deg, var(--yellow3) 0%, rgb(0, 0, 0) 50%);
+    }
+}
+
 @media only screen and (max-width: 500px) {
     .popular-posts-side {
         /* margin: ; */
